--- a/functions/package.json
+++ b/functions/package.json
@@ -3,8 +3,9 @@
   "description": "Cloud Functions for Firebase",
   "scripts": {
     "lint": "echo \"Warning: ESLint check skipped\" && exit 0",
-    "serve": "firebase emulators:start --only functions",
-    "shell": "firebase functions:shell",
+    "build": "tsc",
+    "serve": "npm run build && firebase emulators:start --only functions",
+    "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
@@ -12,14 +13,14 @@
   "engines": {
     "node": "22"
   },
-  "main": "index.js",
+  "main": "lib/index.js",
   "dependencies": {
-    "axios": "^1.7.9",
-    "crypto": "^1.0.1",
+    "axios": "^1.9.0",
     "firebase-admin": "^13.1.0",
     "firebase-functions": "^6.3.2"
   },
   "devDependencies": {
+    "typescript": "^5.0.0",
     "eslint": "^8.15.0",
     "eslint-config-google": "^0.14.0",
     "firebase-functions-test": "^3.1.0"
